--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,8 @@
     <string name="action_settings">Settings</string>
     <string name="add_hint">Add a new item</string>
     <string name="add_button_label">Add</string>
+    <string name="title_activity_edit_item">EditItemActivity</string>
+    <string name="submitButtonName">Submit</string>
+    <string name="hintForEditEntry">edit todo entry here</string>
 
 </resources>
